button and footer fixed

--- a/contact.html
+++ b/contact.html
@@ -1048,7 +1048,7 @@
     
   
     <!-- Footer -->
-    <footer class="footer" style="clear: both; display: block; position: relative; width: 100%; margin-top: 3rem;">
+    <footer class="footer" style="clear: both; display: block; position: relative; width: 100%; margin-top: 3rem;border-bottom-left-radius: 0; border-bottom-right-radius: 0;">
         <div class="footer-container">
             <div class="footer-main">
                 <div class="footer-logo-section">
