--- a/industries.html
+++ b/industries.html
@@ -2290,7 +2290,7 @@
         </style>
 
        <!-- Footer -->
-       <footer class="footer" style="clear: both; display: block; position: relative; width: 100%; margin-top: 0;">
+       <footer class="footer" style="clear: both; display: block; position: relative; width: 100%; margin-top: 0;border-bottom-left-radius: 0; border-bottom-right-radius: 0;">
         <div class="footer-container">
             <div class="footer-main">
                 <div class="footer-logo-section">
