--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@
     <!-- Facts Section with Icons -->
     <section class="section facts-section">
         <div class="container">
-            <h2 class="section-heading centered-heading" style="text-align: center !important; margin-left: auto !important; margin-right: auto !important; width: 100% !important; display: block !important; text-decoration: underline !important; text-underline-offset: 8px !important;">Facts about Supreme Thread</h2>
+            <h2 style="font-size: 2.5rem; font-weight: 700; text-align: center; color: var(--primary); text-decoration: underline; text-decoration-color: var(--primary); text-underline-offset: var(--underline-height); margin-bottom: 2rem; margin-top: 1em;">Facts about Supreme Thread</h2>
             <div class="facts-grid-new">
                 <div class="fact-card">
                     <div class="fact-icon">
@@ -1402,7 +1402,7 @@
     <section class="section product-section-new" style="margin-bottom: 0 !important; padding-bottom: 0 !important;">
         <div class="container" style="margin-bottom: 0 !important; padding-bottom: 0 !important;">
             <!-- Standard section heading to match others -->
-            <h2 class="section-heading centered-heading" style="text-align: center !important; margin-left: auto !important; margin-right: auto !important; width: 100% !important; display: block !important; text-decoration: underline !important; text-underline-offset: 8px !important; margin-bottom: 2.5rem !important;">Our Products</h2>
+            <h2 style="font-size: 2.5rem; font-weight: 700; text-align: center; color: var(--primary); text-decoration: underline; text-decoration-color: var(--primary); text-underline-offset: var(--underline-height); margin-bottom: 2rem; margin-top: 1em;">Our Products</h2>
             
             <!-- New Product Grid -->
             <div class="product-grid-new" style="margin-bottom: 0 !important; padding-bottom: 0 !important;">
@@ -1918,7 +1918,7 @@
     <!-- Testimonial Section with Bigger Images -->
     <section class="section testimonial-section">
         <div class="container">
-            <h2 class="section-heading" style="margin-bottom: 3.5rem;">What Our Clients Say</h2>
+            <h2 style="font-size: 2.5rem; font-weight: 700; text-align: center; color: var(--primary); text-decoration: underline; text-decoration-color: var(--primary); text-underline-offset: var(--underline-height); margin-bottom: 2rem; margin-top: 1em;">What Our Clients Say</h2>
             <div class="testimonials-grid-new">
                 <div class="testimonial-card-new">
                     <div class="testimonial-image">
