--- a/industries.html
+++ b/industries.html
@@ -1200,7 +1200,7 @@
     <!-- Modern Industries Section -->
     <section id="industries-list" class="industries-modern-section">
       <div class="industries-modern-container">
-        <h2 class="industries-modern-title" data-aos="fade-up"style="text-decoration: underline;">Industries We Serve</h2>
+        <h2 data-aos="fade-up" style="font-size: 2.5rem; font-weight: 700; text-align: center; color: var(--primary); text-decoration: underline; text-decoration-color: var(--primary); text-underline-offset: var(--underline-height); margin-bottom: 2rem; margin-top: 1em;">Industries We Serve</h2>
         <p class="industries-modern-intro" data-aos="fade-up" data-aos-delay="100">
           Our innovative threads empower diverse industries with precision and reliability. Discover how Supreme Thread elevates performance across sectors.
         </p>
@@ -1441,7 +1441,7 @@
  <!-- Process Section -->
  <section class="section process-section" id="process-section">
   <div class="container">
-      <h2 class="section-heading" style="text-align: center; text-decoration: underline;">Our Manufacturing Process</h2>
+      <h2 style="font-size: 2.5rem; font-weight: 700; text-align: center; color: var(--primary); text-decoration: underline; text-decoration-color: var(--primary); text-underline-offset: var(--underline-height); margin-bottom: 2rem; margin-top: 1em;">Our Manufacturing Process</h2>
       <p class="section-subtitle" style="text-align: center;" data-aos="fade-up" data-aos-delay="100">Our precision-engineered process ensures the highest quality in every thread we produce</p>
       
       <div class="process-steps">
@@ -1708,7 +1708,6 @@
       position: relative;
       z-index: 2;
       border: 1px solid rgba(26, 60, 64, 0.08);
-      background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='%231a3c40' fill-opacity='0.04' fill-rule='evenodd'/%3E%3C/svg%3E");
       background-size: 120px;
       background-position: center;
       background-opacity: 0.5;
